test_programs/compile_failure/noirc_frontend_tests_infers_lambda_argument_from_variable_double_alias_type/src/main.nr

    pub struct Foo {
        value: Field,
    }

    type FooFn = fn(Foo) -> Field;
    type FooFn2 = FooFn;

    fn main() {
      let _: FooFn2 = |foo| foo.value;
    }
    